package inf101.v19.sem2.ui;

public enum GridCellStates {
	PEG_WHITE,
	PEG_RED,
	CLEAR
}
